# template-rust

./: .releaserc.yml  Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml  lint.yml  publish.yml  release.yml  test.yml
src/: main.rs
