[package]
name = "template-rust"
version = "0.1.0"
edition = "2021"
authors = ["OKP4.com"]
description = "A template project for Rust."
documentation = "https://github.com/okp4/template-rust/blob/master/README.md"
homepage = "https://github.com/okp4/template-rust"
repository = "https://github.com/okp4/template-rust"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
