[package]
authors = ["OKP4.com"]
description = "A template project for Rust."
documentation = "https://github.com/okp4/template-rust/blob/master/README.md"
edition = "2021"
homepage = "https://github.com/okp4/template-rust"
license-file = "LICENSE"
name = "template-rust"
readme = "README.md"
repository = "https://github.com/okp4/template-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
